--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "start": "node dist/server.js",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
-    "test:unit": "yarn test -- --watch -c jest-unit-config.js",
-    "test:integration": "yarn test -- --watch -c jest-integration-config.js",
-    "test:staged": "yarn test -- --findRelatedTests",
-    "test:ci": "yarn test -- --coverage"
+    "test:unit": "npm test -- --watch -c jest-unit-config.js",
+    "test:integration": "npm test -- --watch -c jest-integration-config.js",
+    "test:staged": "npm test -- --findRelatedTests",
+    "test:ci": "npm test -- --coverage"
   },
   "author": "Gustavo Miranda",
   "license": "MIT",
@@ -73,7 +73,7 @@
     "faker": "^4.1.0",
     "jest": "^26.1.0",
     "mockdate": "^3.0.2",
-    "mongodb-memory-server": "6.6.1",
+    "mongodb-memory-server": "^6.6.1",
     "mongodb-memory-server-core": "^6.6.6",
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
@@ -82,10 +82,6 @@
     "supertest": "^4.0.2",
     "ts-jest": "^26.0.0",
     "typescript": "^3.9.3"
-  },"config": {
-    "mongodbMemoryServer": {
-      "version": "6.6.1"
-    }
   },
   "engines": {
     "node": "12.x"
