--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
-version: '3'
+version: "3"
 
 services:
   app:
     build: .
     ports:
-      - '3333:3333'
-    command: yarn debug
+      - "3333:3333"
+    command: yarn debug 
