--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "typescript": "^3.9.3"
   },
   "engines": {
-    "node": "12.x"
+    "node": "12.18.4"
   },
   "_moduleAliases": {
     "@": "dist"
